force-app/main/default/objects/Collection_Data__c/Collection_Data__c.object-meta.xml
<CustomObject>
    <label>Collection Data</label>
    <nameField>
        <label>Collection Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>