force-app/main/default/objects/Collection_Data__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Collection Datas</relationshipLabel>
    <relationshipName>Collection_Datas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>