force-app/main/default/objects/Collection_Data__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Stop</label>
    <referenceTo>Stop__c</referenceTo>
    <relationshipLabel>Collection Datas</relationshipLabel>
    <relationshipName>Collection_Datas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>