force-app/main/default/objects/Collection_Data__c/fields/Waste_Type__c.field-meta.xml
<CustomField>
    <fullName>Waste_Type__c</fullName>
    <label>Waste Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garbage</fullName>
            </value>
            <value>
                <fullName>Recyclables</fullName>
            </value>
            <value>
                <fullName>Hazardous Waste</fullName>
            </value>
            <value>
                <fullName>Green Waste</fullName>
            </value>
            <value>
                <fullName>Construction Waste</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>